2002-01-16  Georg C. F. Greve  <greve@gnu.org>

	* configure.in: created simple autoconf setup.
