@@ -1,11 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.2 2002/01/16 21:41:21 greve Exp $
+dnl $Id: configure.in,v 1.3 2002/01/31 15:29:23 greve Exp $
 AC_INIT(configure.in)
 
 PACKAGE="spamass-milter"
 MAJOR_VERSION=0
 MINOR_VERSION=1
-MICRO_VERSION=0
+MICRO_VERSION=1
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
